--- a/assets/main.css
+++ b/assets/main.css
@@ -63,13 +63,12 @@ iframe {
 }
 
 .navbar-map {
-    position: absolute;
-    top: 0;
+    position: fixed;
     z-index: 1;
     background: #191818;
     padding: 1em;
     min-height: 5em;
-    width: 98%;
+    width: 100%;
 }
 
 .map {
@@ -143,3 +142,20 @@ h1 {
     min-height: 10em;
     background: #FDD64B;
 }
+
+.iqlogo-wrap {
+    margin-right: 1em;
+}
+
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) { 
+    .nav {
+        display: none;
+    }
+    .wrap-map-link {
+        padding: 4em 1em;
+    }
+    .disclosure {
+        padding: 0 .4em;
+    }
+ }
