--- a/assets/main.css
+++ b/assets/main.css
@@ -141,6 +141,10 @@ h1 {
 .iqstats {
     min-height: 10em;
     background: #FDD64B;
+    padding-top: 2em;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 2em;
 }
 
 .iqlogo-wrap {
