--- a/assets/main.css
+++ b/assets/main.css
@@ -161,7 +161,7 @@ h1 {
 }
 
 footer {
-    background: #1E1E1E;
+    background: #58215d;
     color: #FFF;
     margin: 0 auto;
     padding: 2em;
