--- a/assets/main.css
+++ b/assets/main.css
@@ -106,6 +106,7 @@ h1 {
 
 .subtitle {
     text-align: center;
+    padding: .8em;
 }
 
 .vermapa {
@@ -135,17 +136,28 @@ h1 {
 .disclosure {
     color: #FFF;
     margin-top: auto;
-    padding: 0 6em;
+    padding: 0 4em;
 }
 
 .iqstats {
-    min-height: 10em;
-    color: #1E1E1E;
-    background: #8C8C8CCF;
+    background-image: url(img/rodeo-pic.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 25em;
     margin: 0 auto;
     text-align: center;
     font-size: 1em;
     border-top: 20px solid #1e1e1e;
+}
+
+.iqstats p {
+    background: #1e1e1e;
+    color: #E5E5E5;
+    padding: .5em .8em;
+    border-radius: 4px;
+    max-width: 33em;
+    margin: 2em auto 0 auto;
 }
 
 .iqstats-wrapper {
@@ -174,7 +186,7 @@ footer a {
 }
 
 /* Small devices (landscape phones, less than 768px) */
-@media (max-width: 767.98px) { 
+@media (max-width: 576px) { 
     .nav {
         display: none;
     }
@@ -183,5 +195,15 @@ footer a {
     }
     .disclosure {
         padding: 0 .4em;
+    }
+    div.itemAirvisualWidget:nth-child(5),
+    div.itemAirvisualWidget:nth-child(7) {
+        display: none !important;
+    }
+    .iqstats p {
+        max-width: 16em;
+    }
+    .wrap-map-link {
+        max-width: 21em;
     }
  }
