--- a/assets/main.css
+++ b/assets/main.css
@@ -39,7 +39,7 @@ body {
     font-size: .7em;
 }
 
-iframe {
+.widget-air iframe {
     min-height: 100vh;
     position: absolute;
     top: -4px;
@@ -162,6 +162,11 @@ h1 {
     margin: 2em auto 0 auto;
 }
 
+.iqstats span {
+    margin-top: .5rem;
+    color: #E5E5E5;
+}
+
 .iqstats-wrapper {
     margin: 0 auto;
 }
@@ -172,6 +177,16 @@ h1 {
 
 .widget-air {
     width: 100%;
+}
+
+.podcast {
+    background-color: #191818;
+}
+
+.podcast .podcast-wrapper {
+    margin: 0 auto;
+    max-width: 45rem;
+    padding: 2rem 0;
 }
 
 footer {
